implemented login functionality
