# backend/controllers/User.js
@@ -26,9 +26,8 @@ module.exports.getUserById = function getUserById (req, res, next) {
 };
 
 module.exports.loginUser = function loginUser (req, res, next) {
-  var username = req.swagger.params['username'].value;
-  var password = req.swagger.params['password'].value;
-  User.loginUser(username,password)
+  var body = req.swagger.params['body'].value;
+  User.loginUser(body)
     .then(function (response) {
       utils.writeJson(res, response);
     })
